<resources>
    <string name="app_name">Routines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_appbar_activity_reminder">Редактирование напоминаний</string>
    <string name="ed_activity_reminder_main">Введите название</string>
    <string name="ed_activity_reminder_header">Введите текст</string>
    <string name="btn_activity_reminder_save">Сохранить</string>
    <string name="tv_appbar_activity_scenario">Редактирование сценариев</string>

    <string name="btn_scenario_change_condition">Если</string> <!--сука блять-->
    <string name="btn_scenario_change_aftermath">Тогда</string>
</resources>