<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    tools:context=".ScenarioActivity">


    <ImageView
        android:id="@+id/buttonBackSC"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/caretleftoutlined" />

<!--    TODO переписать приложение на java-->

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tv_appbar_activity_scenario"
        android:textColor="#FFB117"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackSC">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent">>

            <Button
                android:id="@+id/btnAcChangeCond"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#FFB117"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/btn_scenario_change_condition"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:cornerRadius="12dp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vw_emptyView1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/btnAcChangeCond" />

            <Button
                android:id="@+id/btnAcChangeAftermath"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#FFB117"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/btn_scenario_change_aftermath"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:cornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@+id/vw_emptyView1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFB117"
            android:fontFamily="@font/montserrat_bold"
            android:text="Сохранить"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>