<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    android:background="#1C1C1C"
    tools:context=".ReminderActivity">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/caretleftoutlined" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tv_appbar_activity_reminder"
        android:textColor="#FFB117"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        app:layout_constraintBottom_toTopOf="@id/timeInputContainer"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:backgroundTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/ed_activity_reminder_header"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:backgroundTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@null"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/ed_activity_reminder_main"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeInputContainer"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:foregroundGravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <!-- Левый блок -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/leftBlock"
                android:layout_width="0dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rightBlock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5">

                <EditText
                    android:id="@+id/editTextHour"
                    android:layout_width="75dp"
                    android:layout_height="48dp"
                    android:hint="ММ"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/separatorText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/separatorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/editTextMinute"
                    app:layout_constraintStart_toEndOf="@id/editTextHour"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextMinute"
                    android:layout_width="75dp"
                    android:layout_height="48dp"
                    android:hint="ЧЧ"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/separatorText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rightBlock"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/leftBlock"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5">

                <EditText
                    android:id="@+id/editTextDay"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:hint="ДД"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/editTextMonth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

                <!-- Месяц -->
                <EditText
                    android:id="@+id/editTextMonth"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:hint="MM"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/editTextYear"
                    app:layout_constraintStart_toEndOf="@id/editTextDay"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

                <!-- Год -->
                <EditText
                    android:id="@+id/editTextYear"
                    android:layout_width="75dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:hint="ГГГГ"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/editTextMonth"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttom_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/btn_activity_reminder_save"
            android:textColor="#FFB117"
            android:textSize="16sp"
            android:gravity="center"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>